--- a/index.scss
+++ b/index.scss
@@ -2,11 +2,9 @@ body{
     background: black;
 }
 img{
-    width:200px;
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
- 
+    width:300px;
+    height:500px;
+    overflow: hidden;
 }
 @mixin imgGlitch($name, $intensity, $width, $height, $top, $left) {
   
@@ -35,15 +33,27 @@ img{
     }
 
     > img:nth-child(2) {
-      left: ($left + 2) + px;
-      animation: #{$name}-anim-1 3s infinite linear alternate-reverse;
+      left: ($left) + px;
+      animation: #{$name}-anim-1 7s infinite linear alternate-reverse;
     }
     > img:nth-child(3) {
-      left: ($left - 2) + px;
-      animation: #{$name}-anim-2 4s infinite linear alternate-reverse;
+      left: ($left) + px;
+      animation: #{$name}-anim-2 9s infinite linear alternate-reverse;
     }
   }
   .example-three {
 
     @include imgGlitch("example-three", 15, 100, 100, 200, 75);
+
+  }
+  .container{
+    position:absolute; /*it can be fixed too*/
+    left:0; right:0;
+    top:0; bottom:0;
+    margin:auto;
+
+    /*this to solve "the content will not be cut when the window is smaller than the content": */
+    max-width:100%;
+    max-height:100%;
+    overflow:auto;
   }
