--- a/style.css
+++ b/style.css
@@ -2,88 +2,100 @@ body {
   background: black; }
 
 img {
-  width: 200px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
+  width: 300px;
+  height: 500px;
+  overflow: hidden; }
 
 @keyframes example-three-anim-1 {
   0% {
-    clip-path: inset(25% 0 24% 0); }
+    clip-path: inset(45% 0 50% 0); }
   6.66667% {
-    clip-path: inset(39% 0 41% 0); }
+    clip-path: inset(50% 0 46% 0); }
   13.33333% {
-    clip-path: inset(79% 0 10% 0); }
+    clip-path: inset(96% 0 5% 0); }
   20% {
-    clip-path: inset(30% 0 2% 0); }
+    clip-path: inset(1% 0 43% 0); }
   26.66667% {
-    clip-path: inset(34% 0 1% 0); }
+    clip-path: inset(77% 0 15% 0); }
   33.33333% {
-    clip-path: inset(77% 0 9% 0); }
+    clip-path: inset(33% 0 31% 0); }
   40% {
-    clip-path: inset(70% 0 7% 0); }
+    clip-path: inset(81% 0 5% 0); }
   46.66667% {
-    clip-path: inset(66% 0 24% 0); }
+    clip-path: inset(87% 0 12% 0); }
   53.33333% {
-    clip-path: inset(33% 0 46% 0); }
+    clip-path: inset(88% 0 10% 0); }
   60% {
-    clip-path: inset(57% 0 18% 0); }
+    clip-path: inset(48% 0 29% 0); }
   66.66667% {
-    clip-path: inset(27% 0 2% 0); }
+    clip-path: inset(2% 0 4% 0); }
   73.33333% {
-    clip-path: inset(99% 0 1% 0); }
+    clip-path: inset(85% 0 6% 0); }
   80% {
-    clip-path: inset(84% 0 11% 0); }
+    clip-path: inset(31% 0 36% 0); }
   86.66667% {
-    clip-path: inset(41% 0 55% 0); }
+    clip-path: inset(73% 0 26% 0); }
   93.33333% {
-    clip-path: inset(81% 0 7% 0); }
+    clip-path: inset(58% 0 35% 0); }
   100% {
-    clip-path: inset(18% 0 74% 0); } }
+    clip-path: inset(22% 0 44% 0); } }
 
 @keyframes example-three-anim-2 {
   0% {
-    clip-path: inset(9% 0 91% 0); }
+    clip-path: inset(7% 0 91% 0); }
   6.66667% {
-    clip-path: inset(84% 0 12% 0); }
+    clip-path: inset(68% 0 23% 0); }
   13.33333% {
-    clip-path: inset(93% 0 6% 0); }
+    clip-path: inset(47% 0 53% 0); }
   20% {
-    clip-path: inset(98% 0 3% 0); }
+    clip-path: inset(26% 0 73% 0); }
   26.66667% {
-    clip-path: inset(39% 0 10% 0); }
+    clip-path: inset(63% 0 30% 0); }
   33.33333% {
-    clip-path: inset(63% 0 23% 0); }
+    clip-path: inset(21% 0 3% 0); }
   40% {
-    clip-path: inset(7% 0 85% 0); }
+    clip-path: inset(5% 0 65% 0); }
   46.66667% {
-    clip-path: inset(13% 0 13% 0); }
+    clip-path: inset(61% 0 2% 0); }
   53.33333% {
-    clip-path: inset(81% 0 10% 0); }
+    clip-path: inset(86% 0 9% 0); }
   60% {
-    clip-path: inset(16% 0 26% 0); }
+    clip-path: inset(31% 0 15% 0); }
   66.66667% {
-    clip-path: inset(3% 0 78% 0); }
+    clip-path: inset(90% 0 4% 0); }
   73.33333% {
-    clip-path: inset(99% 0 1% 0); }
+    clip-path: inset(11% 0 11% 0); }
   80% {
-    clip-path: inset(82% 0 2% 0); }
+    clip-path: inset(62% 0 25% 0); }
   86.66667% {
-    clip-path: inset(97% 0 3% 0); }
+    clip-path: inset(35% 0 15% 0); }
   93.33333% {
-    clip-path: inset(29% 0 47% 0); }
+    clip-path: inset(94% 0 4% 0); }
   100% {
-    clip-path: inset(71% 0 10% 0); } }
+    clip-path: inset(16% 0 12% 0); } }
 
 .example-three > img {
   position: absolute;
-  top: 71px;
+  top: 16px;
   left: 75px; }
 
 .example-three > img:nth-child(2) {
-  left: 77px;
-  animation: example-three-anim-1 3s infinite linear alternate-reverse; }
+  left: 75px;
+  animation: example-three-anim-1 7s infinite linear alternate-reverse; }
 
 .example-three > img:nth-child(3) {
-  left: 73px;
-  animation: example-three-anim-2 4s infinite linear alternate-reverse; }
+  left: 75px;
+  animation: example-three-anim-2 9s infinite linear alternate-reverse; }
+
+.container {
+  position: absolute;
+  /*it can be fixed too*/
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  /*this to solve "the content will not be cut when the window is smaller than the content": */
+  max-width: 100%;
+  max-height: 100%;
+  overflow: auto; }
